DuPont DevSB/src/objects/Track_Update__c.object
<CustomObject>
    <description>Status report details</description>
    <fields>
        <fullName>Accomplishments_this_Period__c</fullName>
        <description>Accomplishments this Period</description>
        <label>Accomplishments this Period</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <description>Overall percent complete for this track</description>
        <label>Percent Complete</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_but_Not_Accomplished__c</fullName>
        <description>Planned, but Not Accomplished</description>
        <label>Planned, but Not Accomplished</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Planned_for_Next_Period__c</fullName>
        <description>Planned for Next Period</description>
        <label>Planned for Next Period</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Status Report</description>
        <label>Status Report</label>
        <referenceTo>Status_Report__c</referenceTo>
        <relationshipLabel>Track Updates</relationshipLabel>
        <relationshipName>R00N80000002QnvWEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Scrum Team working on the Track</description>
        <inlineHelpText>Select your team name from the look up</inlineHelpText>
        <label>Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Track Updates</relationshipLabel>
        <relationshipName>Track_Updates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Track_Status_Icon__c</fullName>
        <description>Displays an image (red, yellow, green) for each possible track status.</description>
        <formula>IMAGE( 
CASE(    Track_Status__c  , 
&quot;On Schedule&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;Potential Risk&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;At Risk&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;Closed&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;track status indicator&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Track Status Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Track_Status__c</fullName>
        <label>Track Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Schedule</fullName>
                </value>
                <value>
                    <fullName>Potential Risk</fullName>
                </value>
                <value>
                    <fullName>At Risk</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <description>Track - referred to as Project Phase in Status Report output template</description>
        <label>Track</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Setup &amp; Design</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>Deploy</fullName>
                </value>
                <value>
                    <fullName>Hyper-Care</fullName>
                </value>
                <value>
                    <fullName>Closure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Track Update</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status_Report__c</columns>
        <columns>Team__c</columns>
        <columns>Track_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Corporate_Core_Packaging_Team_Track_Up</fullName>
        <columns>NAME</columns>
        <columns>Status_Report__c</columns>
        <columns>Team__c</columns>
        <columns>Track_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Corporate (Core Packaging) Team</value>
        </filters>
        <label>Corporate (Core Packaging) Team Track Up</label>
    </listViews>
    <listViews>
        <fullName>FMC_Ag_SoW010_Track_Update</fullName>
        <columns>NAME</columns>
        <columns>Status_Report__c</columns>
        <columns>Team__c</columns>
        <columns>Track_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>FMC-AG SoW010</value>
        </filters>
        <label>FMC Ag  SoW010 Track Update</label>
    </listViews>
    <listViews>
        <fullName>Team_A_Track_Updates</fullName>
        <columns>NAME</columns>
        <columns>Status_Report__c</columns>
        <columns>Team__c</columns>
        <columns>Track_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Team A - NH CRM - E&amp;C/DSS</value>
        </filters>
        <label>Team A Track Updates</label>
    </listViews>
    <listViews>
        <fullName>Team_C_Track_Updates</fullName>
        <columns>NAME</columns>
        <columns>Status_Report__c</columns>
        <columns>Team__c</columns>
        <columns>Track_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Team C - AG Utility - SpecCo PA - DPS</value>
        </filters>
        <label>Team C Track Updates</label>
    </listViews>
    <listViews>
        <fullName>Team_MATCO_CRM_Team_MATCO_Utility</fullName>
        <columns>NAME</columns>
        <columns>Status_Report__c</columns>
        <columns>Team__c</columns>
        <columns>Track_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team__c</field>
            <operation>equals</operation>
            <value>Team D MATCO CRM,Team D MATCO Utility</value>
        </filters>
        <label>Team MATCO CRM / Team MATCO Utility</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Status Report Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Track Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>